added content to about me, need to set links for various past projects

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0," ,>
-    <title>Frank McDonald</title>
+    <title>Contact | Your Name</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -29,7 +29,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">About</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <!-- <li><a href="contact.html">Contact</a></li> -->
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -40,18 +40,23 @@
         <div class="row">
             <div class="col-sm-7">
                 <div class="page-header">
-                    <h1>About Me</h1>
+                    <h1>Contact</h1>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6 col-md-8">
-                        <div class="thumbnail">
-                            <img src="assets/images/Me.png" class="auth-image" alt="Your Name">
-                        </div>
-                        <div class="masthead">
-                            <p>No it’s not a midlife crisis, it is a new direction in life. I’m a  Junior web developer that like to learn new tech. I grew up on puzzles and coding is one of the greatest puzzles of all. I am able to build a sophisticated website with full database backend all the way from mockup to rollout. Adept at working with diverse teams to implement projects. </p>
-                            <p>I just recently graduated from a Full Stack Coding Bootcamp, through the University of Arizona. Through the program I have become familiar with several mainstream programming languages, principles and software. My goal is to continue to develop new skills while toning my current ones, with plans to ultimately obtaining a career in Web Development professionally.</p>
-                          
-                        </div>
+                    <div class="col-md-10">
+                        <form>
+                            <div class="form-group">
+                                <label for="exampleInputName2">Name</label>
+                                <input type="text" class="form-control" id="exampleInputName2" placeholder="John Smith">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail2">Email</label>
+                                <input type="email" class="form-control" id="exampleInputEmail2" placeholder="example@gmail.com">
+                            </div>
+                            <label for="textarea">Message</label>
+                            <textarea class="form-control" rows="6"></textarea>
+                            <button type="submit" class="btn btn-default">Submit</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -61,11 +66,11 @@
                         <div class="panel-title">
                             <h2>Connect with Me</h2>
                         </div>
-                    </div>
-                    <div class="text-center panel-body">
-                        <a href="https://github.com/Morecai"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-                        <a href="https://www.linkedin.com/in/frank-mcdonald"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-                        <a href="http://stackoverflow.com/users/7803081/frank-mcdonald"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+                        <div class="text-center panel-body">
+                            <a href="https://github.com/Morecai"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+                            <a href="https://www.linkedin.com/in/frank-mcdonald-a2395a138/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+                            <a href="http://stackoverflow.com/users/7803081/frank-mcdonald"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+                        </div>
                     </div>
                 </div>
             </div>
