--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0," ,>
-    <title>Contact | Your Name</title>
+    <title>Frank McDonald</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -45,7 +45,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-md-6">
                         <div class="thumbnail">
-                            <img src="assets/images/technics-q-c-640-480-1.jpg">
+                            <img src="assets/images/WCS.png">
                             <div class="caption">
                                 <h3>WCS-React</h3>
                             </div>
@@ -53,26 +53,26 @@
                     </div>
                     <div class="col-sm-6 col-md-6">
                         <div class="thumbnail">
-                            <img src="assets/images/technics-q-c-640-480-2.jpg">
+                            <img src="assets/images/burger.png">
                             <div class="caption">
-                                <h3>RPG Game</h3>
+                                <h3>Eat da Burger</h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-6">
                         <div class="thumbnail">
-                            <img src="assets/images/technics-q-c-640-480-5.jpg">
+                            <img src="assets/images/Beer.png">
                             <div class="caption">
-                                <h3>Trivia Game</h3>
+                                <h3>Drink It!</h3>
                                 
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-6">
                         <div class="thumbnail">
-                            <img src="assets/images/technics-q-c-640-480-7.jpg">
+                            <img src="assets/images/Marvel.png">
                             <div class="caption">
-                                <h3>Rutgers Info Widget</h3>
+                                <h3>Marvel Vs Marvel</h3>
                                 
                             </div>
                         </div>
