--- a/portfolio.html
+++ b/portfolio.html
@@ -51,6 +51,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-md-6">
                         <div class="thumbnail">
+                            <a href="https://wcs-react.herokuapp.com/"></a>
                             <img src="assets/images/WCS.png">
                             <div class="caption">
                                 <h3>WCS-React</h3>
