changes to css and links added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-md-8">
                         <div class="thumbnail">
-                            <img src="assets/images/Me.png" class="auth-image" alt="Your Name">
+                            <img src="assets/images/SS.png" class="auth-image" alt="Your Name">
                         </div>
                         <div class="masthead">
                             <p>No it’s not a midlife crisis, it is a new direction in life. I’m a  Junior web developer that like to learn new tech. I grew up on puzzles and coding is one of the greatest puzzles of all. I am able to build a sophisticated website with full database backend all the way from mockup to rollout. Adept at working with diverse teams to implement projects. </p>
