--- a/portfolio.html
+++ b/portfolio.html
@@ -50,39 +50,36 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-6 col-md-6">
-                        <div class="thumbnail">
-                            <a href="https://wcs-react.herokuapp.com/"></a>
+                        <a href="https://wcs-react.herokuapp.com/" class="thumbnail">
                             <img src="assets/images/WCS.png">
                             <div class="caption">
                                 <h3>WCS-React</h3>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-sm-6 col-md-6">
-                        <div class="thumbnail">
+                        <a href="https://glacial-journey-25679.herokuapp.com/burgers" class="thumbnail">
                             <img src="assets/images/burger.png">
                             <div class="caption">
                                 <h3>Eat da Burger</h3>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-sm-6 col-md-6">
-                        <div class="thumbnail">
+                        <a href="https://fierce-mountain-26415.herokuapp.com/burgers" class="thumbnail">
                             <img src="assets/images/Beer.png">
                             <div class="caption">
                                 <h3>Drink It!</h3>
-
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-sm-6 col-md-6">
-                        <div class="thumbnail">
+                        <a href="https://caseyrubel.github.io/Marvel" class="thumbnail">
                             <img src="assets/images/Marvel.png">
                             <div class="caption">
                                 <h3>Marvel Vs Marvel</h3>
-
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
