minor text change

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <img src="assets/images/SS.png" class="auth-image" alt="Your Name">
                         </div>
                         <div class="masthead">
-                            <p>No it’s not a midlife crisis, it is a new direction in life. I’m a  Junior web developer that like to learn new tech. I grew up on puzzles and coding is one of the greatest puzzles of all. I am able to build a sophisticated website with full database backend all the way from mockup to rollout. Adept at working with diverse teams to implement projects. </p>
+                            <p>Welcome to my portfolio page. I am a  web developer that like to learn new technology. I grew up on puzzles and coding is one of the greatest puzzles of all. I am able to build a sophisticated website with full database backend all the way from mockup to rollout. Adept at working with diverse teams to implement projects. </p>
                             <p>I just recently graduated from a Full Stack Coding Bootcamp, through the University of Arizona. Through the program I have become familiar with several mainstream programming languages, principles and software. My goal is to continue to develop new skills while toning my current ones, with plans to ultimately obtaining a career in Web Development professionally.</p>
                           
                         </div>
